--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jest": "^27.5.2",
+    "@types/jspdf": "^1.3.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^16.18.119",
     "@types/qs": "^6.9.17",
@@ -20,17 +21,20 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "sass": "^1.81.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
