--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/qs": "^6.9.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
@@ -25,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "qs": "^6.13.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-loader-spinner": "^6.1.6",
