--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/qs": "^6.9.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-input-mask": "^3.0.6",
     "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -29,6 +30,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
